--- a/ED_TP_EpN_2016/nbproject/project.properties
+++ b/ED_TP_EpN_2016/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/ED_TP_EpN_2016.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ED_12.jar=..\\Libraries\\ED_12\\dist\\ED_12.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.ED_12.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
